Fixed the z-index header, added style to the shield from the section play game

--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -2,6 +2,7 @@ header {
   height: 10rem;
   width: 100%;
   position: fixed;
+  z-index: 10;
   display: flex;
   justify-content: space-around;
   align-items: center;
