--- a/src/style/SectionCharacter.scss
+++ b/src/style/SectionCharacter.scss
@@ -1,89 +1,87 @@
 main {
-    height: 100%;
+  height: 100%;
+  width: 100%;
+
+  .section-character {
+    background-image: url(./src/resources/img-character.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100rem;
     width: 100%;
-  
-    .section-character {
-      background-image: url(./src/resources/img-character.jpg);
-      background-repeat: no-repeat;
-      background-size: cover;
-      height: 100rem;
-      width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    .arrow-left {
+      cursor: pointer;
+      height: 6rem;
+      width: 6rem;
+      fill: whitesmoke;
+      transition: 1s;
+      &:hover {
+        transition: 1s;
+        transform: scale(1.3);
+      }
+    }
+
+    .arrow-right {
+      cursor: pointer;
+      height: 6rem;
+      width: 6rem;
+      fill: whitesmoke;
+      transition: 1s;
+      &:hover {
+        transition: 1s;
+        transform: scale(1.3);
+      }
+    }
+
+    #title-section-characters {
+      color: white;
+      font-family: "pixel", sans-serif;
+      font-size: 6rem;
+      text-shadow: 5px 5px 0 black;
+    }
+
+    div {
+      height: 60rem;
+      width: 60rem;
       display: flex;
-      justify-content: space-around;
+      justify-content: center;
       align-items: center;
-  
-  
-      .arrow-left {
-        cursor: pointer;
-        height: 6rem;
-        width: 6rem;
-        rotate: (180deg);
-        fill: whitesmoke;
-        transition: 1s;
-        &:hover{
-          transition: 1s;
-          transform: scale(1.3);
-        }
-      }
-  
-      .arrow-right {
-        cursor: pointer;
-        height: 6rem;
-        width: 6rem;
-        fill: whitesmoke;
-        transition: 1s;
-        &:hover{
-          transition: 1s;
-          transform: scale(1.3);
-        }
-      }
-  
-      #title-section-characters {
-        color: whitesmoke;
-        font-family: "pixel", sans-serif;
-        font-size: 6rem;
-        text-shadow: 5px 5px 5px #222;
-      }
-  
+      flex-direction: column;
+      gap: 2rem;
+
       div {
-        height: 60rem;
-        width: 60rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        gap: 2rem;
-  
-        div {
-          height: 50rem;
-          width: 50rem;
-          border-radius: 10%;
-          background: linear-gradient(45deg, #efeecf 24%, #ae8d7c 80%);
-        }
-  
-        h2 {
-          cursor: pointer;
-          color: transparent;
-          font-family: "pixel", sans-serif;
-          font-size: 5rem;
-          background-image: url(./src/resources/fire.gif);
-          background-position: center;
-          -webkit-background-clip: text;
-        }
-  
-        img {
-          cursor: pointer;
-          height: 25rem;
-          width: 25rem;
-          border-radius: 50%;
-        }
-  
-        p {
-          padding: 2rem;
-          font-family: "pixel", sans-serif;
-          font-size: 1.2rem;
-          text-align: justify;
-        }
+        height: 50rem;
+        width: 50rem;
+        border-radius: 10%;
+        background: linear-gradient(45deg, #efeecf 24%, #ae8d7c 80%);
+      }
+
+      h2 {
+        cursor: pointer;
+        color: transparent;
+        font-family: "pixel", sans-serif;
+        font-size: 5rem;
+        background-image: url(./src/resources/water.gif);
+        background-position: center;
+        -webkit-background-clip: text;
+      }
+
+      img {
+        cursor: pointer;
+        height: 25rem;
+        width: 25rem;
+        border-radius: 50%;
+      }
+
+      p {
+        padding: 2rem;
+        font-family: "pixel", sans-serif;
+        font-size: 1.2rem;
+        text-align: justify;
       }
     }
   }
+}
