--- a/src/style/SectionNews.scss
+++ b/src/style/SectionNews.scss
@@ -25,8 +25,8 @@
       color: transparent;
       text-align: left;
       font-family: "pixel", sans-serif;
-      font-size: 3rem;
-      background-image: url(./src/resources/fire.gif);
+      font-size: 4rem;
+      background-image: url(./src/resources/earth.gif);
       background-position: center;
       -webkit-background-clip: text;
     }
